properly fixing scrolling on mobile devices

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,9 +8,6 @@
 
 .carousel {
     display: flex;
-    overflow-x: scroll;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
     padding: 0;
     -ms-overflow-style: none;
     scrollbar-width: none;
